--- a/index.html
+++ b/index.html
@@ -138,9 +138,8 @@
             2. Click <b>Add New...</b> and select <b>Storage</b>.<br>
             3. Choose <b>Neon (Serverless Postgres)</b>.<br>
             4. Click the <b>Create</b> button.<br>
-            5. On the next screen, click <b>Continue</b>.
+            5. On the "Create Database" screen, press <b>Continue</b>.
         </div>
-        
     </div>
 
     <div class="step" id="step4">
@@ -149,10 +148,10 @@
         <div class="info-box">
             1. In the <b>Database Name (*)</b> field, paste this exact name:<br>
             <span id="uniqueDbName" class="copy-box">Generating...</span><br>
-            2. Click the black <b>Create</b> button at the bottom.<br>
-            3. Once created, click <b>Connect</b> and copy the <b>Postgres Connection String</b>.
+            2. Press <b>Create</b>.<br>
+            3. On the next page, press <b>Done</b>.<br>
+            4. Finally, click <b>Connect</b> and copy the <b>Postgres Connection String</b>.
         </div>
-        
     </div>
 
     <div class="step" id="step5">
